# hosh

./: .dockerignore  .env.checker.example  .env.example  .env_sample  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  README.md  dev.Dockerfile  docker-compose-all.yml  docker-compose-checker.yml  docker-compose-dev-all.yml  docker-compose-dev.yml  docker-compose.staging.yml  docker-compose.yml  run.sh  rust-toolchain.toml
.github/workflows/: docker-compose-build.yml  docker-publish.yml  staging-deploy.yml
Dockerfiles/: btc.Dockerfile
btc/: Dockerfile  api.py  entrypoint.sh
btc-backend/: Cargo.toml  Dockerfile
btc-backend/src/: main.rs  utils.rs
btc-backend/src/routes/: electrum.rs  mod.rs
btc-backend/src/routes/electrum/: electrum_peers.rs  electrum_query.rs  electrum_servers.rs  mod.rs  peers.rs  query.rs  servers.rs
btc-backend/src/tls/: mod.rs  native_tls.rs  rustls_tls.rs
checkers/btc/: .dockerignore  Cargo.toml  Dockerfile  README.md  dev.Dockerfile  worker.py
checkers/btc/src/: main.rs  utils.rs
checkers/btc/src/routes/: health.rs
checkers/btc/src/routes/electrum/: peers.rs  query.rs
checkers/btc/src/worker/: mod.rs
checkers/http/: Cargo.toml  Dockerfile  README.md  dev.Dockerfile
checkers/http/src/: blockchain.rs  blockchaindotcom.rs  blockchair.rs  blockstream.rs  main.rs  mempool.rs  types.rs  zcashexplorer.rs  zecrocks.rs
checkers/http/src/blockchair/: blockchairdotcom.rs  blockchairdotonion.rs  mod.rs
checkers/tor/: Cargo.toml
checkers/zec/: Cargo.toml  Dockerfile  README.md  dev.Dockerfile
checkers/zec/src/: main.rs  socks_connector.rs
chronicler/: .dockerignore  Dockerfile  README.md  init-db.sh
chronicler/config.d/: disable-system-logs.xml
chronicler/migrations/: 001_initial_schema.sql  002_block_explorer_heights.sql  003_add_port_to_targets.sql  004_cleanup_system_logs.sql  005_add_port_aware_uptime_stats.sql  006_add_community_flag_to_targets.sql  007_add_ttl_and_extracted_columns.sql  008_fix_uptime_stats_by_port.sql  009_drop_block_explorer_heights.sql  010_backfill_usa_location.sql  011_truncate_system_logs.sql
collector/: Dockerfile  collector.py  utils.py
contrib/btc-backend-py/: Dockerfile  README.md  api.py
contrib/dashboard/: .dockerignore  .gitignore  Dockerfile  app.py  dash_app.py
contrib/dashboard/callbacks/: __init__.py  blockchain_heights.py  clickhouse_data.py  navigation.py  server_status.py
contrib/dashboard/data/: __init__.py  clickhouse_client.py  nats_client.py  redis_client.py
contrib/dashboard/layouts/: __init__.py  blockchain_heights.py  clickhouse_data.py  main_layout.py  server_status.py
contrib/dashboard/pages/: check_triggers.py
contrib/example-bdk/: Cargo.toml
contrib/example-bdk/src/: main.rs
contrib/example-electrum-peer-discovery/: Cargo.toml
contrib/example-electrum-peer-discovery/src/: main.rs
contrib/example-nats/: Dockerfile  README.md  docker-compose.yml
contrib/example-nats/src/: main.rs
contrib/example-zec/: Cargo.toml
contrib/example-zec/src/: main.rs
contrib/log_growth/: log_growh_linux.sh  log_growth_mac.sh
contrib/nostr-alert/: .dockerignore  Cargo.toml  README.md  dev.Dockerfile  prod.Dockerfile
contrib/nostr-alert/src/: main.rs
crates/hosh/: Cargo.toml
crates/hosh-checker-btc/: Cargo.toml
crates/hosh-checker-btc/src/: lib.rs  utils.rs  worker.rs
crates/hosh-checker-btc/src/routes/: api_info.rs
crates/hosh-checker-btc/src/routes/electrum/: mod.rs  query.rs
crates/hosh-checker-zec/: Cargo.toml
crates/hosh-checker-zec/src/: lib.rs  socks_connector.rs
crates/hosh-core/: Cargo.toml
crates/hosh-core/src/: clickhouse.rs  config.rs  lib.rs  tracing_setup.rs  types.rs
crates/hosh-discovery/: Cargo.toml
crates/hosh-discovery/src/: lib.rs
crates/hosh-web/: Cargo.toml
crates/hosh-web/src/: lib.rs
crates/hosh-web/templates/: index.html  layout.html  leaderboard.html  server.html
crates/hosh/src/: main.rs
dashboard/: Dockerfile  dash_app.py
discovery/: Cargo.toml  Dockerfile  dev.Dockerfile  discovery.py  requirements.txt
discovery/src/: main.rs
docs/: .gitignore  README.md  book.toml
docs/src/: SUMMARY.md  architecture.d2  architecture.md  chapter_1.md  checker-btc.md  checker-http.md  checker-zec.md  chronicler.md  clickhouse-schema.md  introduction.md  nostr-alert.md  web.md
nats-example/: Cargo.toml
publisher/: Cargo.toml  Dockerfile  publisher.py  requirements.txt  wait-for-it.sh
publisher/src/: clickhouse.rs  config.rs  lib.rs  main.rs  models.rs  publisher.rs  redis_store.rs
redis/: Dockerfile
web/: Cargo.toml  Dockerfile  README.md  dev.Dockerfile
web/src/: main.rs
web/templates/: base.html  blockchain_heights.html  check.html  explorer_row.html  index.html  layout.html  server.html
worker/: Dockerfile
