[workspace]
resolver = "2"
members = [
    "crates/hosh",
    "crates/hosh-core",
    "crates/hosh-web",
    "crates/hosh-checker-btc",
    "crates/hosh-checker-zec",
    "crates/hosh-discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP clients
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework (actix)
actix-web = "4.9"
actix-files = "0.6"
askama = "0.12"
askama_actix = "0.14"

# Web framework (axum) - for BTC checker API mode
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# gRPC (for ZEC checker)
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
http = "1.2.0"
hyper-util = { version = "0.1", features = ["tokio"] }

# Zcash
zcash_client_backend = { version = "0.19.0", features = ["lightwalletd-tonic-tls-webpki-roots", "orchard"] }

# Bitcoin/Electrum
bdk = { version = "0.27", features = ["electrum"] }
electrum-client = "0.22.0"
bitcoin = "0.32"

# SOCKS/Tor support
tokio-socks = "0.5"
tokio-openssl = "0.6"
arti-client = "0.29.0"

# HTML scraping (for discovery)
scraper = "0.18"

# Misc utilities
regex = "1.0"
qrcode = { version = "0.14", features = ["svg"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
futures = "0.3"
futures-util = { version = "0.3", features = ["std"] }
redis = { version = "0.28.0", features = ["tokio-comp"] }

# Force specific version for compatibility
priority-queue = "=1.3.2"

# Internal crates
hosh-core = { path = "crates/hosh-core" }
hosh-web = { path = "crates/hosh-web" }
hosh-checker-btc = { path = "crates/hosh-checker-btc" }
hosh-checker-zec = { path = "crates/hosh-checker-zec" }
hosh-discovery = { path = "crates/hosh-discovery" }

# OpenSSL (platform-specific handling done in individual crates)
openssl = "0.10"
