[package]
name = "btc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bdk = { version = "0.27", features = ["electrum"] }
electrum-client = "0.22.0"
bitcoin = "0.32"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
chrono = "0.4"
