[package]
name = "btc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & Networking
axum = "0.6"
reqwest = { version = "0.11", features = ["json", "socks"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Async & I/O
tokio = { version = "1.43.0", features = ["full"] }
tokio-socks = "0.5"

# Serialization & Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"

# Bitcoin & Electrum
bdk = { version = "0.27", features = ["electrum"] }
electrum-client = "0.22.0"
bitcoin = "0.32"

# Time Handling
chrono = { version = "0.4", features = ["serde"] }

# TLS - Modern (Rustls)
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.26" # Provides system root certificates

# TLS - Legacy (Native TLS for fallback)
native-tls = "0.2"
tokio-native-tls = "0.3"

# Tor Support
arti-client = "0.26"
