[package]
name = "discovery"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.18"
uuid = { version = "1.7.0", features = ["v5"] }
env_logger = "0.11.1"
futures = "0.3"
log = "0.4.20" 