[package]
name = "hosh-web"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
askama = { version = "0.12" }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.28.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.33"
uuid = { version = "1.4", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 