[package]
name = "btc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & Networking
axum = "0.6"
reqwest = { version = "0.11", features = ["json", "socks"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Async & I/O
tokio = { version = "1.43.0", features = ["full"] }
tokio-socks = "0.5"

# Serialization & Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"

# Bitcoin & Electrum
bdk = { version = "0.27", features = ["electrum"] }
electrum-client = "0.22.0"
bitcoin = "0.32"

# Time Handling
chrono = { version = "0.4", features = ["serde"] }
tokio-openssl = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Messaging & Storage
async-nats = "0.33"
redis = { version = "0.24", features = ["tokio-comp"] }
futures = "0.3"
futures-util = { version = "0.3", features = ["std"] }

# OpenSSL (Only TLS implementation)
## On macOS, force vendored OpenSSL
[target.'cfg(not(target_os = "linux"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

## On Linux (Docker container), use system OpenSSL
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10" }

# Tor Support
arti-client = { version = "0.26", default-features = false, features = ["tokio", "native-tls"] }

# New dependencies for worker functionality
async-nats = "0.33"
redis = { version = "0.24", features = ["tokio-comp"] }
futures = "0.3"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Add this line to force a specific version
priority-queue = "=1.3.2"

