[package]
name = "checker-http"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
scraper = "0.18"
tokio = { version = "1.0", features = ["full"] }
redis = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.33"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "v5"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
