[package]
name = "checker-tor"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
arti-client = { version = "0.29.0", features = ["full"] }
tor-rtcompat = { version = "0.29.0", features = ["tokio", "native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
thiserror = "1.0"

[[bin]]
name = "example"
path = "src/example.rs"

[[bin]]
name = "checker-tor"
path = "src/main.rs" 