[package]
name = "checker-zec"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
http = { version = "1.2.0" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "1.10.3", features = ["test-elevation"] }
async-nats = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
