[package]
name = "checker-zec"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
http = "1.2.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
async-nats = "0.33.0"
zcash_client_backend = { version = "0.18.0", features = ["lightwalletd-tonic-tls-webpki-roots", "orchard"] }
zcash_primitives = { version = "0.22.0" }
tonic = { version = "0.12", features = ["tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
