[package]
name = "zec-doinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
http = "1.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
zingolib = { git = "https://github.com/zecrocks/zingolib.git", branch = "donation", features = ["test-elevation"] }