[package]
name = "nostr-alert"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { version = "0.42.0", features = ["nip04", "nip44", "nip59"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
