[package]
name = "hosh-checker-btc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hosh-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
axum.workspace = true
tokio-socks.workspace = true
tokio-openssl.workspace = true
bdk.workspace = true
electrum-client.workspace = true
bitcoin.workspace = true
hex.workspace = true
base64.workspace = true
futures.workspace = true
futures-util.workspace = true

# Platform-specific OpenSSL
[target.'cfg(not(target_os = "linux"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10" }
